=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 v2.001

=over

=item *

Upgraded to HTML::Template v2.8 and HTML::Template::Expr v0.05. [Sam]

=item *

Fixed Krang::CGI::Help to lookup help files in an addon's
F<htdocs/help/> directory, allowing addons to provide their own help
content. [Sam]

=item *

Fixed a flaw in Krang::Handler that allowed access to any file via the
root handler.  Now only image files and the two Krang CSS files are
accessable without logging-in. [Sam]

=item *

Added new script, krang_upload_templates, to upload a 
directory of templates into a Krang instance.  Modified
krang_createdb to call this script.  [Jesse Erlbaum]


=item *

Sweetened up Krang::ElementClass::RadioGroup to use HTML
<labels>, and to allow you to specify a number of columns
for the input form.  Added "list_group" parameter to allow
RadioGroup to be populated from a Krang list.  [Jesse Erlbaum]


=item *

Added "find" parameter to Krang::ElementClass::StoryLink and 
::MediaLink, to allow element authors to pre-set a filter
in their element library.  Cleaned up some tests, silenced
some spurious warnings.  [Jesse Erlbaum]


=item *

Fixed bug in Krang::Alert which would not allow sub-classes of Krang
objects to be used.  Fixed Krang::ListItem tests in t/find.t, and
improved order_desc test to check entire result set.  Fixed bug
in t/library.t which caused some tests to appear without names.
[Jesse Erlbaum]


=item *

Fixed a bug in krang_create_lists which caused script to fail for
new addon system.  Added new feature to krang_create_lists and
lists.conf to permit list items to be specified. [Jesse Erlbaum]


=item *

Fixed a bug in which some tests would fail if the configured 
element set did not have an "article" type.  Tests will now run
even if you're using a custom element library.  [Jesse Erlbaum]


=item *

Fixed a bug in Krang::lib which caused "legacy" /krang/element_lib path to